# ARMinor-2020-Maniputaltor-with-FOC-and-FPGA

./: LICENSE  README.md
Electrical_Design/: README.md
Electrical_Design/eagle_schematic/: eagle.epf  motor_controller.s#1  motor_controller.s#2  motor_controller.s#3  motor_controller.s#4  motor_controller.s#5  motor_controller.s#6  motor_controller.sch  tool_psu.sch
Electrical_Design/eagle_schematic/libraries/: LM5085.lbr  Xilinx - XC3S50A-4VQG100C.lbr  ar_manarm_comps.lbr  diodes.lbr  ld1117as12tr.lbr
Mechanical_Design/: README.md
Mechanical_Design/Models/: Manipulator_model.SLDASM  armProto.SLDASM
Mechanical_Design/Models/Parts/: Base.SLDPRT  armBase.SLDPRT  armEFMount.SLDPRT  armLink1.SLDPRT  armLink2.SLDPRT  armLink3.SLDPRT
Simulation/: README.md
Simulation/Docs/: Installation.md  README.md  RosSharpOverrides.md  UnitySetup.md
Simulation/GUI/: .gitignore  README.md  requirements.txt
Simulation/GUI/src/gui/: main_window.py
Simulation/GUI/src/gui/io/: io_frame.py
Simulation/GUI/src/gui/move/: axes_panel.py  axis_frame.py  move_frame.py
Simulation/GUI/src/gui/program /: program_frame.py
Simulation/GUI/src/gui/visualisation/: camera_control.py  robot_frame.py  robot_image.py
Simulation/GUI/src/ros_bridge/: description.md
Simulation/GUI/src/ros_bridge/publishers/: axis_joy_publisher.py  camera_control_publisher.py
Simulation/ROS/unity_sim/unity_msgs/: CMakeLists.txt  package.xml
Simulation/ROS/unity_sim/unity_msgs/msg/: speed_control.msg
Simulation/Unity/Assets/RosSharpFontys/: JointStateControlSubscriber.cs  JointStateControlWriter.cs
(+7 files in other folders)
