<?xml version="1.0"?>
<package format="2">
  <name>unity_msgs</name>
  <version>0.0.0</version>
  <description>The unity_sim package</description>

  <maintainer email="fontysrobotics@fontys.nl">fontys_robotics</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <depend>std_msgs</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
